# blender-opencode

./: .gitignore  AGENTS.md  opencode.json  pyproject.toml
.opencode/skills/analysis-consciousness-council/: SKILL.md
.opencode/skills/analysis-exploratory-data-analysis/: SKILL.md
.opencode/skills/analysis-geniml/: SKILL.md
.opencode/skills/analysis-hypothesis-generation/: SKILL.md
.opencode/skills/analysis-research-lookup/: SKILL.md
.opencode/skills/analysis-scholar-evaluation/: SKILL.md
.opencode/skills/analysis-scientific-brainstorming/: SKILL.md
.opencode/skills/analysis-scientific-critical-thinking/: SKILL.md
.opencode/skills/analysis-statistical-analysis/: SKILL.md
.opencode/skills/analysis-what-if-oracle/: SKILL.md
.opencode/skills/bio-arboreto/: SKILL.md
.opencode/skills/bio-cellxgene-census/: SKILL.md
.opencode/skills/bio-depmap/: SKILL.md
.opencode/skills/bio-diffdock/: SKILL.md
.opencode/skills/bio-glycoengineering/: SKILL.md
.opencode/skills/bio-medchem/: SKILL.md
.opencode/skills/bio-molecular-dynamics/: SKILL.md
.opencode/skills/bio-neurokit2/: SKILL.md
.opencode/skills/bio-neuropixels-analysis/: SKILL.md
.opencode/skills/bio-pathml/: SKILL.md
.opencode/skills/bio-phylogenetics/: SKILL.md
.opencode/skills/bio-pufferlib/: SKILL.md
.opencode/skills/bio-pyhealth/: SKILL.md
.opencode/skills/bio-scvelo/: SKILL.md
.opencode/skills/bio-scvi-tools/: SKILL.md
.opencode/skills/bio-stable-baselines3/: SKILL.md
.opencode/skills/bio-timesfm-forecasting/: SKILL.md
.opencode/skills/blender-api/: SKILL.md
.opencode/skills/blender-core_api/: SKILL.md
.opencode/skills/blender-molecular_nodes/: SKILL.md
.opencode/skills/db-alphafold/: SKILL.md
.opencode/skills/db-arxiv/: SKILL.md
.opencode/skills/db-bindingdb/: SKILL.md
.opencode/skills/db-biorxiv/: SKILL.md
.opencode/skills/db-brenda/: SKILL.md
.opencode/skills/db-cbioportal/: SKILL.md
.opencode/skills/db-chembl/: SKILL.md
.opencode/skills/db-clinicaltrials/: SKILL.md
.opencode/skills/db-clinpgx/: SKILL.md
.opencode/skills/db-clinvar/: SKILL.md
.opencode/skills/db-cosmic/: SKILL.md
.opencode/skills/db-drugbank/: SKILL.md
.opencode/skills/db-ena/: SKILL.md
.opencode/skills/db-ensembl/: SKILL.md
.opencode/skills/db-fda/: SKILL.md
.opencode/skills/db-gene/: SKILL.md
.opencode/skills/db-geo/: SKILL.md
.opencode/skills/db-gnomad/: SKILL.md
.opencode/skills/db-gtex/: SKILL.md
.opencode/skills/db-gwas/: SKILL.md
.opencode/skills/db-hmdb/: SKILL.md
.opencode/skills/db-interpro/: SKILL.md
.opencode/skills/db-jaspar/: SKILL.md
.opencode/skills/db-kegg/: SKILL.md
.opencode/skills/db-metabolomics-workbench/: SKILL.md
.opencode/skills/db-monarch/: SKILL.md
.opencode/skills/db-openalex/: SKILL.md
.opencode/skills/db-opentargets/: SKILL.md
.opencode/skills/db-pdb/: SKILL.md
.opencode/skills/db-pubchem/: SKILL.md
.opencode/skills/db-pubmed/: SKILL.md
.opencode/skills/db-reactome/: SKILL.md
.opencode/skills/db-string/: SKILL.md
.opencode/skills/db-uniprot/: SKILL.md
.opencode/skills/db-uspto/: SKILL.md
.opencode/skills/db-zinc/: SKILL.md
.opencode/skills/doc-citation-management/: SKILL.md
.opencode/skills/doc-docx/: SKILL.md
.opencode/skills/doc-latex-posters/: SKILL.md
.opencode/skills/doc-literature-review/: SKILL.md
.opencode/skills/doc-markdown-mermaid-writing/: SKILL.md
.opencode/skills/doc-markitdown/: SKILL.md
.opencode/skills/doc-paper-2-web/: SKILL.md
.opencode/skills/doc-pdf/: SKILL.md
.opencode/skills/doc-pptx/: SKILL.md
.opencode/skills/doc-pptx-posters/: SKILL.md
.opencode/skills/doc-scientific-writing/: SKILL.md
.opencode/skills/doc-xlsx/: SKILL.md
.opencode/skills/finance-hedgefundmonitor/: SKILL.md
.opencode/skills/finance-market-research-reports/: SKILL.md
.opencode/skills/general-skill_creator/: SKILL.md
.opencode/skills/lib-anndata/: SKILL.md
.opencode/skills/lib-astropy/: SKILL.md
.opencode/skills/lib-biopython/: SKILL.md
.opencode/skills/lib-bioservices/: SKILL.md
.opencode/skills/lib-cirq/: SKILL.md
.opencode/skills/lib-cobrapy/: SKILL.md
.opencode/skills/lib-dask/: SKILL.md
.opencode/skills/lib-datamol/: SKILL.md
.opencode/skills/lib-deepchem/: SKILL.md
.opencode/skills/lib-deeptools/: SKILL.md
.opencode/skills/lib-dhdna-profiler/: SKILL.md
.opencode/skills/lib-edgartools/: SKILL.md
.opencode/skills/lib-esm/: SKILL.md
.opencode/skills/lib-etetoolkit/: SKILL.md
.opencode/skills/lib-flowio/: SKILL.md
.opencode/skills/lib-fluidsim/: SKILL.md
.opencode/skills/lib-geopandas/: SKILL.md
.opencode/skills/lib-gget/: SKILL.md
.opencode/skills/lib-gtars/: SKILL.md
.opencode/skills/lib-histolab/: SKILL.md
.opencode/skills/lib-lamindb/: SKILL.md
.opencode/skills/lib-matchms/: SKILL.md
.opencode/skills/lib-matlab/: SKILL.md
.opencode/skills/lib-matplotlib/: SKILL.md
.opencode/skills/lib-molfeat/: SKILL.md
.opencode/skills/lib-networkx/: SKILL.md
.opencode/skills/lib-pennylane/: SKILL.md
.opencode/skills/lib-plotly/: SKILL.md
.opencode/skills/lib-polars/: SKILL.md
.opencode/skills/lib-primekg/: SKILL.md
.opencode/skills/lib-pydeseq2/: SKILL.md
.opencode/skills/lib-pydicom/: SKILL.md
.opencode/skills/lib-pylabrobot/: SKILL.md
.opencode/skills/lib-pymatgen/: SKILL.md
.opencode/skills/lib-pymc/: SKILL.md
.opencode/skills/lib-pymoo/: SKILL.md
.opencode/skills/lib-pyopenms/: SKILL.md
.opencode/skills/lib-pysam/: SKILL.md
.opencode/skills/lib-pytdc/: SKILL.md
.opencode/skills/lib-pytorch-lightning/: SKILL.md
.opencode/skills/lib-pyzotero/: SKILL.md
.opencode/skills/lib-qiskit/: SKILL.md
.opencode/skills/lib-qutip/: SKILL.md
.opencode/skills/lib-rdkit/: SKILL.md
.opencode/skills/lib-rowan/: SKILL.md
.opencode/skills/lib-scanpy/: SKILL.md
.opencode/skills/lib-scikit-bio/: SKILL.md
.opencode/skills/lib-scikit-learn/: SKILL.md
.opencode/skills/lib-scikit-survival/: SKILL.md
.opencode/skills/lib-seaborn/: SKILL.md
(+74 files in other folders)
