[project]
name = "blender-opencode"
version = "0.1.0"
description = "Blender scripting and molecular visualization with headless bpy"
requires-python = "==3.11.*"
dependencies = [
    "molecularnodes[bpy]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "fake-bpy-module-5.0",  # LSP support for Blender API
]

[tool.uv]
# Pin numpy to 1.26 — required by bpy and molecularnodes
constraint-dependencies = [
    "numpy==1.26.*",
]
