[project]
name = "blender-opencode"
version = "0.1.0"
description = "Blender scripting and molecular visualization with headless bpy"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bpy>=4.0.0",              # Blender as a Python module (includes bmesh, mathutils)
    "numpy>=1.24.0,<1.27.0",   # Required by Blender, pinned version
    "matplotlib>=3.7.0",       # For fallback visualizations
    "fake-bpy-module-5.0",      # Type hints for Blender API
]

[project.optional-dependencies]
dev = [
    "pytest",
]

databases = [
    # Core database packages
    "biopython>=1.80",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0", 
    "seaborn>=0.12.0",
    "requests>=2.28.0",
    "lxml>=4.9.0",
    
    # Database-specific clients
    "chembl_webresource_client>=0.10.0",
    "pubchempy>=1.0.0",
    "bioservices>=1.11.0",
    "ensembl_rest>=0.3.0",
    "reactome2py>=0.1.0",
    "drugbank-downloader>=0.2.0",
    "rcsb-api>=1.0.0", 
    "rcsbsearchapi>=1.0.0",
    "GEOparse>=2.0.0",
    "zeep>=4.2.0",
    "bioversions>=0.5.0",
    # "uspto-opendata-python>=0.2.0",  # Has conflicting requests dependency
    "statsmodels>=0.14.0",
]

databases-heavy = [
    # Heavy packages - optional installation
    "rdkit>=2023.3.0",
    "google-cloud-bigquery>=3.10.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0.0",
]

databases-ml = [
    # ML-specific packages for advanced analysis
    "scikit-learn>=1.3.0",
    "networkx>=3.0.0", 
    "statsmodels>=0.14.0",
]

# Scientific Python Libraries (lib- skills)
libraries = [
    # Core scientific libraries
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.2.0",
    "networkx>=2.8.0",
    "sympy>=1.11.0",
    "astropy>=5.0.0",
    
    # Bioinformatics libraries
    "biopython>=1.80.0",
    "scikit-bio>=0.5.7",
    "pysam>=0.19.0",
    "scanpy>=1.9.0",
    
    # Chemistry and materials
    "datamol>=0.10.0",
    "molfeat>=0.8.0",
    
    # Data processing
    "dask>=2023.1.0",
    "polars>=0.16.0",
    "vaex>=4.15.0",
    "zarr>=2.13.0",
    
    # Machine learning frameworks  
    "torch>=1.13.0",
    "pytorch-lightning>=1.8.0",
    "transformers>=4.25.0",
    "shap>=0.42.0",
]

libraries-heavy = [
    # Heavy computational libraries
    "rdkit>=2023.3.0",
    "pymc>=5.0.0",
    "qiskit>=0.40.0",
    "cirq>=1.1.0",
    "pennylane>=0.28.0",
]

# Bioinformatics and Life Sciences (bio- skills) - TEMPORARILY DISABLED
# bioinformatics = [
#     # Core bioinformatics
#     "biopython>=1.80.0",
#     "scanpy>=1.9.0", 
#     "anndata>=0.8.0",
#     "scvelo>=0.2.5",
#     "cellxgene-census>=1.5.0",
#     "pysam>=0.19.0",
#     "pydeseq2>=0.3.0",
#     
#     # Specialized bio tools
#     "pyopenms>=2.8.0",
#     "cobrapy>=0.26.0",
#     "arboreto>=0.1.6",
#     "neurokit2>=0.2.0",
#     "pathml>=2.0.0",
#     "etetoolkit>=3.1.2",
#     "flowio>=1.3.0",
#     
#     # Medical and health informatics
#     "pyhealth>=1.1.0",
#     "stable-baselines3>=2.0.0",
# ]

# Analysis and Statistics (analysis- skills) 
analysis = [
    # Statistical analysis
    "statsmodels>=0.14.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.2.0",
    
    # Specialized analysis
    "shap>=0.42.0",
    "umap-learn>=0.5.3",
]

# External Services (service- skills)
services = [
    # Economic data
    "fred>=3.1.0",
    "alpha-vantage>=2.3.1",
    
    # Cloud and lab integrations
    "modal-client>=0.50.0",
    "opentrons>=6.0.0",
    
    # Data commons
    "google-cloud-storage>=2.7.0",
    "requests>=2.28.0",
]

# Visualization (viz- skills)
visualization = [
    # Core visualization
    "matplotlib>=3.6.0",
    "plotly>=5.0.0", 
    "seaborn>=0.12.0",
    
    # Scientific visualization
    "mayavi>=4.8.0",
    "pyvista>=0.37.0",
    
    # Image generation
    "pillow>=9.0.0",
    "imageio>=2.25.0",
]

# Machine Learning (ml- skills)
machine-learning = [
    # Core ML frameworks
    "scikit-learn>=1.2.0",
    "torch>=1.13.0", 
    "transformers>=4.25.0",
    "pytorch-lightning>=1.8.0",
    
    # Time series and forecasting
    "aeon>=0.6.0",
    "tslearn>=0.5.3",
    
    # Quantum ML
    "qiskit>=0.40.0",
    "cirq>=1.1.0",
    "pennylane>=0.28.0",
    
    # Model interpretation
    "shap>=0.42.0",
    "lime>=0.2.0",
]

# Documentation (doc- skills)
documentation = [
    # Document processing
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0",
    "openpyxl>=3.0.10",
    "python-pptx>=0.6.21",
    
    # Academic writing
    "bibtexparser>=1.4.0",
    "scholarly>=1.7.0",
    
    # Markdown and web
    "markdown>=3.4.0",
    "beautifulsoup4>=4.11.0",
]

# Workflow Management (workflow- skills)
workflows = [
    # Process automation
    "click>=8.0.0",
    "pydantic>=1.10.0",
    "typer>=0.7.0",
    
    # Clinical workflows
    "fhir-resources>=6.0.0",
]

[tool.uv]
# Pin numpy to 1.26 — required by bpy and molecularnodes
constraint-dependencies = [
    "numpy==1.26.*",
]
